--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- This is where we add code for our website -->
     <header>
         <h1 class="hidden">All About The Team</h1>
-        <img src="images/logo.svg" alt="Marvel Logo" id="main-logo">
+        <img src="images/Logo2.png" alt="Marvel Logo" id="main-logo">
     </header>
     <main>
         <nav id="character-nav">
