--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <!-- This is where we add code for our website -->
     <header>
         <h1 class="hidden">All About The Team</h1>
-        <img src="images/Logo.webp" alt="How to Train Your Dragon: The Hidden World Logo" id="main-logo">
+        <img src="images/Logo.png" alt="How to Train Your Dragon: The Hidden World Logo" id="main-logo">
     </header>
+
     <main>
         <nav id="character-nav">
             <ul>
@@ -54,25 +54,41 @@
                 </li>
             </ul>
         </nav>
+
         <section id="instructions">
             <h3>Choose your hero!</h3>
-            <p>Use your mouse to hover / Click to discover more about each How to Train Your dragon:The Hidden World
+            <p>Use your mouse to hover / Click to discover more about each How to Train Your dragon: The Hidden World
                 hero.</p>
         </section>
     </main>
+
     <footer id="sticky-footer">
-        <h3>All images &copy; How to Train Your Dragon: The Hidden World</h3>
+        <h3>All images &copy; How to Train Your Dragon</h3>
     </footer>
 
     <section class="lightbox" id="lightbox">
         <a href="#" class="lightbox_close">X</a>
         <article>
             <h3>Hiccup Haddock - Chief of Berk</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Architecto doloremque est laudantium suscipit tempora
-                molestiae, veniam reprehenderit eius, odio corrupti ea
-                dolorem illum consectetur reiciendis soluta facere totam
-                accusamus. Iusto?</p>
+            <p>
+                Hiccup Horrendous Haddock III is the main protagonist
+                of the DreamWorks animated How to Train Your Dragon
+                franchise. He is the son of Valka and the late Hooligan
+                chief, Stoick the Vast, thus making him the heir, and
+                later, the chief of the tribe. He is 15 years old in the
+                first film, Dragons: Riders of Berk and Dragons: Defenders
+                of Berk, 18 to 20 years old in Dragons: Race to the Edge,
+                20 years old in How to Train Your Dragon 2, 21 years old
+                in How to Train Your Dragon: The Hidden World, and 30 in
+                the epilogue and Homecoming. His dragon and best friend,
+                Toothless, is a Night Fury.
+                <br>
+                <br>
+                By the end of the franchise, he marries Astrid Hofferson
+                and they eventually have a daughter, Zephyr, and a son,
+                Nuffink. He is also the distant ancestor of Tom Kullersen,
+                through his mother Olivia.
+            </p>
         </article>
     </section>
 
@@ -80,11 +96,24 @@
         <a href="#" class="lightbox_close">X</a>
         <article>
             <h3>Toothless - Night Fury</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Architecto doloremque est laudantium suscipit tempora
-                molestiae, veniam reprehenderit eius, odio corrupti ea
-                dolorem illum consectetur reiciendis soluta facere totam
-                accusamus. Iusto?</p>
+            <p>
+                Toothless is Hiccup Horrendous Haddock III's Night Fury
+                and the main dragon character of the How to Train Your
+                Dragon franchise. By the end of the franchise, he not
+                only becomes the Alpha of the dragons in the Hidden World,
+                but also the mate of the Light Fury, the father of the
+                Night Lights Dart, Pouncer, and Ruffrunner, and the
+                ancestor of the Night Light Thunder.
+                <br>
+                <br>
+                Toothless is playful and intelligent with a puppy-like
+                energy. When flying through the dark, he shoots purple
+                flames called plasma blasts in all directions, which
+                bounce off nearby surfaces to give him an accurate
+                reading of his surroundings.
+                <br>
+                — Dragonpedia stat card
+            </p>
         </article>
     </section>
 
@@ -92,23 +121,36 @@
         <a href="#" class="lightbox_close">X</a>
         <article>
             <h3>Light Fury</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Architecto doloremque est laudantium suscipit tempora
-                molestiae, veniam reprehenderit eius, odio corrupti ea
-                dolorem illum consectetur reiciendis soluta facere totam
-                accusamus. Iusto?</p>
+            <p>
+                This unnamed Light Fury is a female Light Fury and
+                Toothless' mate who first appeared in How to Train Your
+                Dragon: The Hidden World.
+                <br>
+                <br>
+                The Light Fury moves as fast as Toothless and shares his
+                ability to blend into the sky — even during daylight hours.
+                With her white coloration, the Light Fury hides seamlessly
+                in clouds, sea fog, and distant horizons.
+            </p>
         </article>
     </section>
 
     <section class="lightbox" id="lightbox4">
         <a href="#" class="lightbox_close">X</a>
         <article>
-            <h3>Dart, Pouncer, and Ruffrunner - Baby Night Lights</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Architecto doloremque est laudantium suscipit tempora
-                molestiae, veniam reprehenderit eius, odio corrupti ea
-                dolorem illum consectetur reiciendis soluta facere totam
-                accusamus. Iusto?</p>
+            <h3>Dart, Pouncer, and Ruffrunner - Night Lights</h3>
+            <p>
+                Dart, Pouncer, and Ruffrunner are the offspring of Toothless
+                and the Light Fury who first appeared in How to Train Your
+                Dragon: The Hidden World.
+                <br>
+                <br>
+                The Night Lights are the offspring of Toothless and the Light
+                Fury. They live in the Hidden World and share some abilities
+                of their parents. Like their parents, Night Lights have powerful
+                plasma blasts. They fire first to warn and only openly attack
+                when threatened.
+            </p>
         </article>
     </section>
 
@@ -116,11 +158,16 @@
         <a href="#" class="lightbox_close">X</a>
         <article>
             <h3>Stormfly - Deadly Nadder</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Architecto doloremque est laudantium suscipit tempora
-                molestiae, veniam reprehenderit eius, odio corrupti ea
-                dolorem illum consectetur reiciendis soluta facere totam
-                accusamus. Iusto?</p>
+            <p>
+                Stormfly is Astrid Hofferson's Deadly Nadder who first appeared
+                in How to Train Your Dragon.
+                <br>
+                <br>
+                Stormfly is a very beautiful and bird-like bipedal dragon with
+                winged-forelimbs that are about the same size as a medium-sized
+                theropod dinosaur and small, yellow (yet keen) eyes with black
+                pupils.
+            </p>
         </article>
     </section>
 
@@ -128,11 +175,21 @@
         <a href="#" class="lightbox_close">X</a>
         <article>
             <h3>Astrid Hofferson - General of Berk</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Architecto doloremque est laudantium suscipit tempora
-                molestiae, veniam reprehenderit eius, odio corrupti ea
-                dolorem illum consectetur reiciendis soluta facere totam
-                accusamus. Iusto?</p>
+            <p>
+                Astrid Hofferson is a female Viking warrior of Clan
+                Hofferson of the Hooligan Tribe. She is 15 years old
+                in How to Train Your Dragon, Riders and Defenders of
+                Berk, 18 in Dawn of the Dragon Racers, 18 and 19 in
+                Dragons: Race to the Edge, 20 in How To Train Your
+                Dragon 2, 21 in How to Train Your Dragon: The Hidden
+                World and 30 in the epilogue and Homecoming.
+                <br>
+                <br>
+                In the final act of How to Train Your Dragon: The
+                Hidden World, she marries Hiccup and officially
+                becomes Chieftess of the Hooligan Tribe. They eventually
+                have a daughter named Zephyr and then a son named Nuffink.
+            </p>
         </article>
     </section>
 
